# housingmanager-exam

./: .gitignore  AGENTS.md  ARCHITECTURE.md  setup.sh  start.sh
backend/: database.py  main.py  models.py  pyproject.toml
backend/routers/: bookmarks_router.py  import_router.py  questions_router.py  quiz_router.py  stats_router.py  wrong_answers_router.py
backend/services/: llm.py  pdf_parser.py
docs/: FRONTEND.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md
docs/design-docs/: core-beliefs.md  index.md
docs/product-specs/: bookmarks.md  filters.md  index.md  pdf-import.md  question-browse.md  quiz-mode.md  study-stats.md  wrong-answer-notes.md
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/bookmarks/: page.tsx
frontend/app/import/: page.tsx
frontend/app/questions/: page.tsx
frontend/app/questions/[id]/: page.tsx
frontend/app/quiz/: page.tsx
frontend/app/quiz/session/[id]/: page.tsx
frontend/app/quiz/session/[id]/result/: page.tsx
frontend/app/stats/: page.tsx
frontend/app/wrong-answers/: page.tsx
frontend/app/wrong-answers/[id]/: page.tsx
frontend/components/: BookmarkButton.tsx  FilterPanel.tsx
frontend/lib/: api.ts
